# ACCEPT_priority2030

./: CMakeLists.txt  README.md  main.cpp  start.sh
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/additional/: additional.h  additional.hpp  field_name.h  message.h
lib/include/database/: db_backend.h  db_message.h  db_message_builder.h  db_pool.h
lib/include/messenger/: client_message.h  esp_message.h  message.h  message_buffer.h  messenger.h  parser.h
lib/include/monitoring/: monitoring_strategy.h  monitoring_system.h  system_condition.h
lib/include/notification/: notification.h  notification_observer.h
lib/include/parser/: parser.h
lib/include/server/: acceptor.h  auth_system.h  server.h
lib/include/session/: session.h  session_collection.h  session_manager.h  session_mediator.h
lib/src/: CMakeLists.txt
lib/src/additional/: additional.cpp
lib/src/database/: db_backend.cpp  db_message.cpp  db_pool.cpp
lib/src/message/: parser.cpp
lib/src/messenger/: client_message.cpp  esp_message.cpp  message.cpp  message_buffer.cpp  messenger.cpp  parser.cpp
lib/src/monitoring/: monitoring_strategy.cpp  monitoring_system.cpp  system_condition.cpp
lib/src/notification/: notification.cpp  notification_observer.cpp
lib/src/parser/: parser.cpp
lib/src/server/: acceptor.cpp  auth_system.cpp  server.cpp
lib/src/session/: session.cpp  session_collection.cpp  session_manager.cpp  session_mediator.cpp
